# tunix-rt

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY_NOTES.md  VISION.md  audit_M10.md  docker-compose.yml  tunix-rt.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  training-smoke.yml  tunix-integration.yml  tunix-runtime.yml  ungar-integration.yml
ProjectFiles/: ExecutiveSummary.md  RediWrapper-README.md  ecprompt.md
ProjectFiles/Prompts/: EnhancementsV2.md
ProjectFiles/Workflows/: LogContext2.md  M05_Coverage_Report.md  M07_coverage_fix_summary.md  context_52777727102.md  context_52778667632.md  context_52782804457.md  context_52788200174.md  context_52792345784.md  context_52852590069.md  context_52854342586.md  context_52868482215.md  context_52878390946.md  context_52926915444.md  context_52932119858.md  context_52933273262.md  context_52934970024.md  context_52944140419.md  context_52946946262.md  context_52949758659.md  context_52952459153.md
artifacts/: .gitignore
backend/: .coveragerc  .coveragerc.full  Dockerfile  coverage.json  pyproject.toml  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_traces_table.py  2b3a4c5d6e7f_add_config_column_to_tunix_runs.py  3c4d5e6f7a8b_add_log_chunks_table.py  4bf76cdb97da_add_tunix_runs_table.py  5d6e7f8a9b0c_add_evaluations_table.py  6e7f8a9b0c1d_add_regression_baselines_table.py  7f8a9b0c1d2e_add_tuning_jobs_table.py  8a9b0c1d2e3f_add_model_registry_tables.py  9b0c1d2e3f4g_add_metrics_to_tunix_runs.py  a1b2c3d4e5f6_add_lower_is_better_to_regression_baselines.py  f3cc010ca8a6_add_scores_table.py  f8f1393630e4_add_traces_created_at_index.py
backend/datasets/dev-reasoning-v2/: dataset.jsonl  manifest.json
backend/datasets/test-v1/: manifest.json
backend/tests/: __init__.py  conftest.py  test_datasets.py  test_datasets_ingest.py  test_dev_reasoning_v2_schema.py  test_e2e_fixture_schema.py  test_evalset_validator.py  test_evaluation.py  test_evidence_files.py  test_execution_guardrails.py  test_health.py  test_helpers.py  test_inference_errors.py  test_judges.py  test_logs.py  test_m24_inference.py  test_m28_tuning.py  test_m28_tuning_integration.py  test_model_registry.py  test_redi_health.py  test_regression.py  test_renderers.py  test_scoring.py  test_services.py  test_services_datasets.py  test_services_regression.py  test_services_ungar.py  test_settings.py  test_sweep_runner.py  test_traces.py  test_traces_batch.py  test_training_schema.py  test_training_scripts_smoke.py  test_tuning_schemas.py  test_tuning_service.py  test_tunix.py  test_tunix_execution.py  test_tunix_registry.py  test_ungar.py  test_ungar_availability.py  (+1 more)
backend/tests/fixtures/e2e/: e2e_ingest.jsonl
backend/tools/: check_determinism.py  cleanup_dataset.py  coverage_gate.py  export_dataset.py  package_submission.py  run_tune_m34.py  seed_dataset.py  seed_dev_reasoning_v1.py  seed_dev_reasoning_v2.py  seed_golden_dataset.py  seed_golden_v2.py  validate_evalset.py
backend/training/: README.md  sft_smoke.py
backend/tunix_rt_backend/: __init__.py  app.py  dependencies.py  metrics.py  redi_client.py  scoring.py  settings.py  worker.py
backend/tunix_rt_backend/db/: __init__.py  base.py
backend/tunix_rt_backend/db/models/: __init__.py  evaluation.py  model_registry.py  regression.py  score.py  trace.py  tuning.py  tunix_run.py
backend/tunix_rt_backend/helpers/: __init__.py  datasets.py  traces.py
backend/tunix_rt_backend/integrations/tunix/: __init__.py  availability.py  manifest.py
backend/tunix_rt_backend/integrations/ungar/: __init__.py  availability.py  high_card_duel.py
backend/tunix_rt_backend/routers/: datasets.py  evaluation.py  health.py  models.py  regression.py  traces.py  tuning.py  tunix.py  tunix_runs.py  ungar.py
backend/tunix_rt_backend/schemas/: __init__.py  dataset.py  evaluation.py  model_registry.py  regression.py  score.py  trace.py  tuning.py  tunix.py  ungar.py
backend/tunix_rt_backend/services/: __init__.py  artifact_storage.py  datasets_builder.py  datasets_export.py  datasets_ingest.py  evaluation.py  judges.py  model_registry.py  regression.py  traces_batch.py  tuning_service.py  tunix_execution.py  tunix_export.py  ungar_generator.py
backend/tunix_rt_backend/training/: __init__.py  renderers.py  schema.py
backend/tunix_rt_backend/tuning/: __init__.py  sweep_runner.py
docs/: DEMO.md  M05_COVERAGE_LIMITATION.md  M07_BASELINE.md  M07_UNGAR_INTEGRATION.md  M08_BASELINE.md  M08_PROGRESS.md  M08_SUMMARY.md  M09_BASELINE.md  M09_DATASET_FORMAT.md  M09_EVAL_LOOP.md  M09_SUMMARY.md  M09_TRAINING_QUICKSTART.md  M10_BASELINE.md  M10_GUARDRAILS.md  M10_SUMMARY.md  M11_BASELINE.md  M11_SUMMARY.md  M12_BASELINE.md  M12_SUMMARY.md  M12_TUNIX_INTEGRATION.md  M13_BASELINE.md  M13_SUMMARY.md  M13_TUNIX_EXECUTION.md  M14_BASELINE.md  M14_RUN_REGISTRY.md  M14_SUMMARY.md  M35_SUMMARY.md  M36_KAGGLE_RUN.md  M36_SUMMARY.md  M6_COVERAGE_DELTA.md  M6_GUARDRAILS.md  M6_VALIDATION_REFACTOR.md  PERFORMANCE_BASELINE.md  PERFORMANCE_SLOs.md  TRAINING_MODES.md  TRAINING_PRODUCTION.md  evaluation.md  kaggle_submission.md  m28_tuning_and_comparison.md  model_registry.md  (+10 more)
docs/adr/: ADR-001-mock-real-integration.md  ADR-002-ci-conditional-jobs.md  ADR-003-coverage-strategy.md  ADR-004-optional-code-coverage.md  ADR-005-coverage-gates-optional-expanding-runtime.md  ADR-006-tunix-api-abstraction.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/playwright-report/: index.html
e2e/test-results/: .last-run.json
e2e/tests/: async_run.spec.ts  (+2 more)
frontend/: .gitignore  index.html  npm-audit.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebooks/: kaggle_submission.ipynb  kaggle_submission.py
research/: README.md
scripts/: dev.ps1  run_m28_sweep.py
training/: README.md  bench_jax.py  eval_generate.py  eval_report.py  run_train_jax.py  train_jax.py  train_sft_tunix.py  train_torch.py
training_pt/: train.py
(+2334 files in other folders)
