[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunix-rt-backend"
version = "0.1.0"
description = "Tunix Reasoning-Trace Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.38.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "sqlalchemy[asyncio]==2.0.45",
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "pyyaml==6.0.3",
    "prometheus-client==0.23.1",
    "setuptools>=78.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-PyYAML>=6.0.0",
    # NOTE:
    # Do not add `types-prometheus-client`.
    # prometheus-client ships inline types (PEP 561).
    "aiosqlite>=0.19.0",
]
ungar = [
    "ungar @ git+https://github.com/m-cahill/ungar.git@0e29e104aa1b13542b193515e3895ee87122c1cb",
]
training = [
    # Note: Tunix is Google's JAX-native post-training library
    # As of Dec 2025, may need to be installed from source
    # For smoke tests, we use minimal CPU-only JAX
    "jax[cpu]>=0.4.20",
    "flax>=0.7.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.5.0",
    # M24: Inference dependencies
    "transformers>=4.30.0",
    "torch>=2.0.0",
    # Tunix library (if/when available on PyPI)
    # "tunix>=0.1.0",
]
tunix = [
    # M13: Optional Tunix runtime for local execution
    # Note: Tunix installation instructions may vary
    # Placeholder for when Tunix becomes publicly available
    # As of Dec 2025, Tunix may need manual installation
    # "tunix>=0.1.0",  # Placeholder - update when available
]
tuning = [
    "ray[tune]>=2.9.0",
    "tabulate>=0.9.0",  # Often useful for Ray output
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tunix_rt_backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "ungar: UNGAR integration tests (requires backend[ungar] installed)",
    "training: Training smoke tests (requires backend[training] installed)",
    "tunix: Tunix execution tests (requires backend[tunix] installed)",
]

# Coverage configuration moved to .coveragerc for better control
# Default CI uses .coveragerc (omits optional UNGAR generator)
# Optional UNGAR workflow uses .coveragerc.full (includes everything)
